  * Add new preprocessor directive syntax¸ using a '!' prefix.  Add a
    prefix_directives option to the setup file to turn this syntax on;
    currently defaults to false, for backward compatibility.  Support
    optional '!' prefix even with prefix_directives off, and use that in
    the underlay to support either setting of prefix_directives.  Add NEWS
    entry with migration information.

 -- Josh Triplett <josh@freedesktop.org>  Sat, 09 Feb 2008 23:01:19 -0800

ikiwiki (2.31) unstable; urgency=low

  [ Joey Hess ]
  * Revert preservation of input file modification times in output files,
    since this leads to too many problems with web caching, especially with
    inlined pages. Properly solving this would involve tracking every page
    that contributes to a page's content and using the youngest of them all,
    as well as special cases for things like the version plugin, and it's just
    too complex to do.
  * aggregate: Forking a child broke the one state that mattered: Forcing
    the aggregating page to be rebuilt. Fix this.
  * cgi hooks are now run before ikiwiki state is loaded.
  * This allows locking the wiki before loading state, which avoids some
    tricky locking code when saving a web edit.
  * poll: This plugin turns out to have edited pages w/o doing any locking.
    Oops. Convert it from a cgi to a sessioncgi hook, which will work
    much better.
  * recentchanges: Improve handling of links on the very static changes pages
    by thunking to the CGI, which can redirect to the page, or allow it to be
    created if it doesn't exist.
  * recentchanges: Exipre all *._change pages, even if the directory
    they're in has changed.
  * aggregate: Lots of changes; aggregation can now run without locking the
    wiki, and there is a separate aggregatelock to prevent multiple concurrent
    aggregation runs.
  * monotone changes by Brian May:
    - On commits, replace "mtn sync" bidirectional with "mtn push" single